Sat Jul 16 03:02:17 1994  Tom Yu  (tlyu at dragons-lair)

	* ksu.c: frob error codes

Fri Jul 15 23:45:34 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* ksu.c (get_dir_of_file): Change to use POSIX getcwd() function.

