@@ -1,3 +1,8 @@
+Thu Jul 21 01:01:20 1994  Tom Yu  (tlyu at dragons-lair)
+
+	* Makefile.in:
+	* configure.in: attempt to autoconf
+
 Sat Jul 16 03:02:17 1994  Tom Yu  (tlyu at dragons-lair)
 
 	* ksu.c: frob error codes
